Fix header on mobile

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
     display: flex;
     flex-direction: row;
     gap: var(--header-link-padding);
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .content {
